--- a/index.html
+++ b/index.html
@@ -18,24 +18,39 @@
     <nav>
       <div class="nav-wrapper">
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons"><span class="iconify" data-icon="ci:hamburger" data-inline="false"></span></i></a>
-        <ul class="right hide-on-med-and-down">
-          <li><a class="enlaces" href="#home">Subir</a></li>
-          <li><a class="enlaces" href="#sobre-mi">Sobre mi</a></li>
-          <li><a class="enlaces" href="#que-hago">¿Qué hago?</a></li>
-          <li><a class="enlaces" href="#mis-proyectos">Mis proyectos</a></li>
-          <li><a class="enlaces" href="#contacto">Hablemos</a></li>
-        </ul>
+        <div class="contenedor-enlaces">
+          <div class="contenedor-enlaces__internos">
+            <ul class="hide-on-med-and-down">
+              <li><a class="enlaces" href="#sobre-mi">Sobre mi</a></li>
+              <li><a class="enlaces" href="#que-hago">¿Qué hago?</a></li>
+              <li><a class="enlaces" href="#mis-proyectos">Mis proyectos</a></li>
+              <li><a class="enlaces" href="#contacto">Hablemos</a></li>
+            </ul>
+          </div>
+          <div class="contenedor-redes">
+            <ul>
+              <li>
+                <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
+                  <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
+                </a>
+              </li>
+              <li>
+                <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
+                  <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </nav>
               
     <ul class="sidenav" id="mobile-demo">
-      <li><a class="enlaces" href="#home">Subir</a></li>
       <li><a href="#sobre-mi">Sobre mi</a></li>
       <li><a href="#que-hago">¿Qué Hago?</a></li>
       <li><a href="#mis-proyectos">Mis Proyectos</a></li>
       <li><a href="#contacto">Hablemos</a></li>
-    </ul>
-          
+    </ul>          
   </header>
 
 
@@ -108,8 +123,8 @@
           <ul id="container-proyectos" class="slides">
 
           </ul>
-              </div>
         </div>
+      </div>
     </div>
   </section>
 
@@ -138,21 +153,9 @@
 
 
   <div class="fixed-action-btn">
-    <a class="btn-floating btn-large red">
-      <i class="large material-icons"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" focusable="false" width="1em" height="1em" style="-ms-transform: rotate(360deg); -webkit-transform: rotate(360deg); transform: rotate(360deg);" preserveAspectRatio="xMidYMid meet" viewBox="0 0 48 48"><g fill="none" stroke="#000" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><path d="M7.95 11.95h32M7.95 23.95h32M7.95 35.95h32"/></g></svg></i>
+    <a class="subir" href="#home">
+      <span class="iconify flecha" data-icon="bi:arrow-up-circle" data-inline="false"></span>
     </a>
-    <ul>
-      <li>
-        <a class="btn-floating" href="https://github.com/danielmedtar">
-          <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
-        </a>
-      </li>
-      <li>
-        <a class="btn-floating" href="https://www.linkedin.com/in/medinataribadaniel/">
-          <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
-        </a>
-      </li>
-    </ul>
   </div>
 
 
