--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
                   <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
                 </a>
               </li>
+              <li>
+                <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
+                  <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
+                </a>
+              </li>
+              <li>
+                <a class="enlaces" href="mailto:dmedinat.ar@gmail.com" target="_blank">
+                  <span class="iconify" data-icon="logos:google-gmail" data-inline="false"></span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -60,13 +70,13 @@
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
       <p class="parrafo-main"> - Front End Developer -</p>
 
-      <button class="animate__animated animate__bounceIn">
+      <button class="animate__animated animate__bounceIn btn-main">
         <a href="https://drive.google.com/file/d/1UVciqeWmU6HM8klRKAuX7y8K8GjIIiwv/view?usp=sharing" target="_blank">Descargar CV</a>
       </button>
     </div>
   </main>
 
-  <section id="sobre-mi" class="padding-section sobre-mi">
+  <section id="sobre-mi" class="padding-section fondo-blanco">
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
@@ -76,7 +86,7 @@
     </div>
   </section>
 
-  <section id="que-hago" class="padding-section servicios">
+  <section id="que-hago" class="padding-section fondo-gris">
     <div class="container-secciones">
       <h2>¿Qué hago?</h2>
       <div class="container-secciones__textos">
@@ -114,7 +124,7 @@
       </div>
   </section>
 
-  <section id="mis-proyectos" class="padding-section sobre-mi">
+  <section id="mis-proyectos" class="padding-section fondo-blanco">
     <div class="container-secciones">
       <h2>Mis <br>proyectos</h2>
       <div class="container-secciones__textos">
@@ -128,7 +138,7 @@
     </div>
   </section>
 
-  <section id="contacto" class="padding-section servicios">
+  <section id="contacto" class="padding-section fondo-gris">
     <div class="container-secciones">
       <h2>Hablemos</h2>
       <div class="container-secciones__textos">
@@ -136,7 +146,7 @@
 
         <div class="botones-contacto">
           <button>
-            <a href="mailto:damt.35@gmail.com" target="_blank">E-mail</a>
+            <a href="mailto:dmedinat.ar@gmail.com" target="_blank">E-mail</a>
           </button>
 
           <button>
