--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h1 class="animate__animated animate__fadeInLeft">Daniel Medina</h1>
       <p class="parrafo-main"> - Front End Developer -</p>
 
-      <button class="animate__animated animate__bounceIn btn-main">
+      <button class="animate__animated animate__bounceIn">
         <a href="https://drive.google.com/file/d/1UVciqeWmU6HM8klRKAuX7y8K8GjIIiwv/view?usp=sharing" target="_blank">Descargar CV</a>
       </button>
     </div>
