--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <p class="parrafo-main"> - Front End Developer -</p>
 
       <button class="animate__animated animate__bounceIn">
-        <a href="https://drive.google.com/file/d/1UVciqeWmU6HM8klRKAuX7y8K8GjIIiwv/view?usp=sharing" target="_blank">Descargar CV</a>
+        <a href="https://drive.google.com/file/d/1WInJ9WsdXEThNd9Gw3-tx2xrNSRg89X3/view?usp=sharing" target="_blank">Ir al CV</a>
       </button>
     </div>
   </main>
