comentario en html

--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
   <!-- ICONIFY -->
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-  <!-- PROPIOS -->
+  <!-- BOOTSTRAP -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
+  <!-- PROPIOS -->
   <script src="js/proyectos.js"></script>
   <script src="js/index.js"></script>
   
