--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </div>
 
 
-  <!-- MATERIALIZE -->
+  <!-------------------- MATERIALIZE -------------------->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
   document.addEventListener('DOMContentLoaded', function() {
@@ -201,13 +201,13 @@
     });
   </script>
 
-  <!-- ICONIFY -->
+<!-------------------- ICONIFY -------------------->
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-  <!-- BOOTSTRAP -->
+<!-------------------- BOOTSTRAP -------------------->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
-  <!-- PROPIOS -->
+<!-------------------- PROPIOS -------------------->
   <script src="js/proyectos.js"></script>
   <script src="js/index.js"></script>
   
