agregando perfil de medium

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
                 </a>
               </li>
               <li>
+                <a class="enlaces" href="https://medium.com/@dmedinat.ar" target="_blank">
+                  <span class="iconify" data-icon="cib:medium" data-inline="false"></span>
+                </a>
+              </li>
+              <li>
                 <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
                   <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
                 </a>
