--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos">
-    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer">
+    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
     <meta name="og:image" content="img/daniel-icon.jpeg">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
