--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos">
     <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
     <meta name="og:title" content="Daniel Medina | Portfolio">
-    <meta name="og:image" content="img/daniel-icon.jpeg">
+    <meta name="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
     <meta name="og:description" content="Daniel Medina | Desarrollador Web">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
