--- a/index.html
+++ b/index.html
@@ -171,7 +171,10 @@
     </div>
   </section>
 
-
+  <footer>
+    <p>Desarrollado por <span><a href="https://github.com/danielmedtar">Daniel Medina &copy;</a></span></p>
+  </footer>
+  
   <div class="fixed-action-btn">
     <a class="subir" href="#home">
       <span class="iconify flecha" data-icon="bi:arrow-up-circle" data-inline="false"></span>
