agregue seccion testimonial

--- a/index.html
+++ b/index.html
@@ -148,7 +148,20 @@
     </div>
   </section>
 
-  <section id="contacto" class="padding-section fondo-gris">
+  <section id="testimonios" class="padding-section fondo-gris">
+    <div class="container-secciones testimonios">
+      <h2>Testimonios</h2>
+      <div class="container-secciones__textos">
+        <div id="container-testimonios">
+
+        </div>
+        
+    
+      </div>
+    </div>
+  </section>
+
+  <section id="contacto" class="padding-section fondo-blanco">
     <div class="container-secciones">
       <h2>Hablemos</h2>
       <div class="container-secciones__textos">
@@ -171,8 +184,8 @@
     </div>
   </section>
 
-  <footer>
-    <p>Desarrollado por <span><a href="https://github.com/danielmedtar">Daniel Medina &copy;</a></span></p>
+  <footer class="fondo-gris">
+    <p>Desarrollado por <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
   <div class="fixed-action-btn">
@@ -219,6 +232,7 @@
 
 <!-------------------- PROPIOS -------------------->
   <script src="js/proyectos.js"></script>
+  <script src="js/testimonios.js"></script>
   <script src="js/index.js"></script>
   
 </body>
