--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <li><a class="enlaces" href="#sobre-mi">Sobre mi</a></li>
               <li><a class="enlaces" href="#que-hago">¿Qué hago?</a></li>
               <li><a class="enlaces" href="#mis-proyectos">Mis proyectos</a></li>
+              <li><a class="enlaces" href="#testimonios">Testimonios</a></li>
               <li><a class="enlaces" href="#contacto">Hablemos</a></li>
             </ul>
           </div>
@@ -69,6 +70,7 @@
       <li><a href="#sobre-mi">Sobre mi</a></li>
       <li><a href="#que-hago">¿Qué Hago?</a></li>
       <li><a href="#mis-proyectos">Mis Proyectos</a></li>
+      <li><a href="#testimonios">Testimonios</a></li>
       <li><a href="#contacto">Hablemos</a></li>
     </ul>          
   </header>
