--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
   </section>
 
   <section id="mis-proyectos" class="padding-section fondo-blanco">
-    <div class="container-secciones">
+    <div class="container-secciones testimonios">
       <h2>Mis <br>proyectos</h2>
       <div class="container-secciones__textos">
         <p>Estos son algunos de los proyectos que he desarrollado:</p>
-        <div class="slider">
-          <ul id="container-proyectos" class="slides">
+        <div id="container-proyectos">
+          
 
-          </ul>
+          
         </div>
       </div>
     </div>
