cambios en el texto sobre mi, y animaciones a los testimonios

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Desde el año 2020 comencé a estudiar todo lo concerniente al Desarrollo Web Front End. He realizado diversos cursos sobre las tecnologías más demandadas en la actualidad, dentro de las cuales destacan: HTML, CSS y JavaScript.</p>
+        <p>Hola gente, espero estén muy bien. Les cuento un poco acerca de mi: soy Abogado de profesión, carrera que ejercí por 7 años. Desde chico siempre me interesó la tecnología ya que mi papá es Ingeniero en Sistemas, siempre lo veía trabajando y me pasaba preguntándole sobre las cosas que hacía en la pantalla y en MSDOS en ese momento. Por esto mi relación con la tecnología y IT en general siempre fue cercana pero no me había atrevido a dar el salto.</p>
+        <p>Cuando emigré a Argentina en el 2017, decidí que era el momento de aprender cosas nuevas y hacer un cambio profesional. En ese instante obviamente me incliné por la tecnología, primero haciendo cursos básicos gratuitos de programación y Desarrollo Front End para explorar, y como me gustó tanto, decidí que este sería el nuevo rumbo que debía darle a mi vida.</p>
         <p>Actualmente, me desempeño como Tutor del curso de Desarrollo Web de Coder House, lo cual, además de mantenerme activo y practicando, también me permite ayudar a los alumnos en su proceso de aprendizaje, corrigiendo sus desafíos y aconsejándolos lo más posible para que puedan cumplir su objetivo exitosamente.</p>                
       </div>
     </div>
@@ -196,7 +197,11 @@
     </a>
   </div>
 
-
+  <!-------------------- MATERIALIZE -------------------->
+  <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
+  <script>
+    new WOW().init();
+  </script>
   <!-------------------- MATERIALIZE -------------------->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
