cambios en description e imagen .ico

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos">
     <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
     <meta property="og:title" content="Daniel Medina | Portfolio">
-    <meta property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
-    <meta property="og:description" content="Desarrollador Web">
+    <meta property="og:image" content="img/daniel-icon.ico">
+    <meta property="og:description" content="Vamos a conocernos un poco más y mira un poco de mis trabajos.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
