--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
     <meta property="og:title" content="Daniel Medina | Portfolio">
-    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
+    <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/foto_prueba3.png">
     <meta name="description" property="og:description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
