quitando etiqueta base

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/foto_prueba3.png">
     <meta name="description" property="og:description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
-    <base target="_blank">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -36,27 +35,27 @@
           <div class="contenedor-redes">
             <ul>
               <li>
-                <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/">
+                <a class="enlaces" href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">
                   <span class="iconify" data-icon="logos:linkedin-icon" data-inline="false"></span>
                 </a>
               </li>
               <li>
-                <a class="enlaces" href="https://github.com/danielmedtar">
+                <a class="enlaces" href="https://github.com/danielmedtar" target="_blank">
                   <span class="iconify" data-icon="logos:github-icon" data-inline="false"></span>
                 </a>
               </li>
               <li>
-                <a class="enlaces" href="https://medium.com/@dmedinat.ar">
+                <a class="enlaces" href="https://medium.com/@dmedinat.ar" target="_blank">
                   <span class="iconify" data-icon="cib:medium" data-inline="false"></span>
                 </a>
               </li>
               <li>
-                <a class="enlaces" href="https://wa.me/+5492213649072">
+                <a class="enlaces" href="https://wa.me/+5492213649072" target="_blank">
                   <span class="iconify" data-icon="logos:whatsapp" data-inline="false"></span>
                 </a>
               </li>
               <li>
-                <a class="enlaces" href="mailto:dmedinat.ar@gmail.com">
+                <a class="enlaces" href="mailto:dmedinat.ar@gmail.com" target="_blank">
                   <span class="iconify" data-icon="logos:google-gmail" data-inline="false"></span>
                 </a>
               </li>
@@ -82,7 +81,7 @@
       <p class="parrafo-main"> - Front End Developer -</p>
 
       <button class="animate__animated animate__bounceIn">
-        <a href="https://drive.google.com/file/d/1LyOim4jlG1FD3WTutqmjj8rNPeqfi-oa/view?usp=sharing">Ir al CV</a>
+        <a href="https://drive.google.com/file/d/1LyOim4jlG1FD3WTutqmjj8rNPeqfi-oa/view?usp=sharing" target="_blank">Ir al CV</a>
       </button>
     </div>
   </main>
@@ -167,15 +166,15 @@
 
         <div class="botones-contacto">
           <button>
-            <a href="mailto:dmedinat.ar@gmail.com">E-mail</a>
+            <a href="mailto:dmedinat.ar@gmail.com" target="_blank">E-mail</a>
           </button>
 
           <button>
-            <a href="https://wa.me/+5492213649072">WhatsApp</a>
+            <a href="https://wa.me/+5492213649072" target="_blank">WhatsApp</a>
           </button>
 
           <button>
-            <a href="https://www.linkedin.com/in/medinataribadaniel/">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/medinataribadaniel/" target="_blank">LinkedIn</a>
           </button>
         </div>        
       </div>
@@ -183,7 +182,7 @@
   </section>
 
   <footer class="fondo-gris">
-    <p>Desarrollado por <span><a href="https://github.com/danielmedtar">Daniel Medina &copy;</a></span></p>
+    <p>Desarrollado por <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
   <div class="fixed-action-btn">
