--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Daniel Medina | Portfolio">
     <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/foto_prueba3.png">
     <meta name="description" property="og:description" content="Bienvenidos a mi Portfolio. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
+    <meta name="theme-color" content="rgba(249, 198, 16, .5)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -90,9 +91,10 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Hola gente, espero estén muy bien. Les cuento un poco acerca de mi: Aunque soy Abogado de profesión, carrera que ejercí por 7 años desde chico siempre me interesó la tecnología ya que mi papá es Ingeniero en Sistemas. Siempre lo veía trabajando y me pasaba preguntándole sobre las cosas que hacía en la pantalla y en MSDOS en ese momento. Por esto mi relación con la tecnología y el mundo IT en general siempre fue cercana pero no me había atrevido a dar el salto.</p>
-        <p>Cuando emigré a Argentina en el 2017, decidí que era el momento de aprender cosas nuevas y hacer un cambio profesional. En ese instante obviamente me incliné por la tecnología, primero haciendo cursos básicos gratuitos de programación y Desarrollo Front End para explorar, y como me gustó tanto, decidí que este sería el nuevo rumbo que debía darle a mi vida.</p>
-        <p>Actualmente, me desempeño como Tutor del curso de Desarrollo Web de CoderHouse, lo cual, además de mantenerme activo y practicando, también me permite ayudar a los alumnos en su proceso de aprendizaje, corrigiendo sus desafíos y aconsejándolos lo más posible para que puedan cumplir su objetivo exitosamente.</p>                
+        <p>Hola gente, espero estén muy bien. Les cuento un poco acerca de mi: Aunque soy Abogado de profesión la cual ejercí por 7 años, desde chico siempre me interesó la tecnología ya que mi papá es Ingeniero en Sistemas. Siempre lo veía trabajando y me pasaba preguntándole sobre las cosas que hacía en la pantalla y en MSDOS en ese momento. Por esto mi relación con la tecnología y el mundo IT en general siempre fue cercana pero no me había atrevido a dar el salto.</p>
+        <p>Cuando emigré a Argentina en el 2017, decidí que era el momento de aprender cosas nuevas y hacer un cambio profesional. En ese instante obviamente me incliné por la tecnología, primero haciendo cursos básicos gratuitos de programación y Desarrollo Front End para explorar, los cuales posteriormente me llevaron a decidir que este sería el nuevo rumbo que debía darle a mi vida.</p>
+        <p>Actualmente, me desempeño como Jr IT Support Analyst en Dentsu International realizando el mantenimiento y actualización de 141 sitios web de una importante empresa del rubro automotriz, todo esto en conjunto con un equipo que incluye otros desarrolladores, diseñadores gráficos, copywriters y ejecutivos de cuentas. Además en mis tiempos libres también me desempeño como Tutor del curso de Desarrollo Web de CoderHouse.</p>
+        <p>Siempre tengo como norte el desempeñar mis labores de la mejor forma posible, con ganas de crecer, pero sobre todo de seguir aprendiendo día a día de cada persona y de cada experiencia.</p>                
       </div>
     </div>
   </section>
