Updating texts and variables in sass

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <div class="container-secciones">
       <h2>Sobre mi</h2>
       <div class="container-secciones__textos">
-        <p>Hola a todos, Les cuento un poco acerca de mi: Soy Abogado de profesión, pero cuando emigré a Argentina en 2017, decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente en el Desarrollo Web Front End, estando siempre dispuesto tanto a mantener las buenas prácticas de programación, como al aprendizaje constante.</p>
+        <p>Hola a todos, Les cuento un poco acerca de mi: Soy Abogado de profesión, pero cuando emigré a Argentina en 2017, decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el Desarrollo Web Front End, estando siempre dispuesto, tanto a mantener las buenas prácticas de programación, como al aprendizaje constante.</p>
 
-        <p>Actualmente, me desempeño como IT Support Analyst en Dentsu International realizando el mantenimiento y actualización del contenido 141 sitios web de una importante empresa del rubro automotriz, todo esto en conjunto con un equipo que incluye otros desarrolladores, diseñadores gráficos, copywriters y ejecutivos de cuentas.</p>
+        <p>Actualmente, me desempeño como IT Support Analyst en Dentsu International realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante empresa del rubro automotriz, todo esto en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas.</p>
 
         <p>Además, me desempeño como Profesor del curso de Desarrollo Web de Coderhouse, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
       </div>
