--- a/english.html
+++ b/english.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="desarrollo web, front end, html, css, javascript, web developer, Daniel Medina">
-    <meta property="og:title" content="Daniel Medina | Portfolio">
+    <meta name="keywords" content="web development, front end, html, css, javascript, web developer, Daniel Medina">
+    <meta property="og:title" content="Daniel Medina">
     <meta name="author" content="Daniel Medina Tariba" />
     <meta property="og:url" content="https://danielmedinatariba.com/" />
     <meta name="image" property="og:image" content="https://danielmedtar.github.io/img/daniel-icon.ico">
-    <meta name="description" property="og:description" content="Bienvenidos a mi Sitio Web. Acá podrán saber un poco mas de mí, conocimientos y proyectos. Conóceme un poco más y ¿Por qué no? Hablemos.">
+    <meta name="description" property="og:description" content="Welcome to my Web Site. Here you can know a little more about me, knowledge and projects. Let's meet.">
     <meta name="theme-color" content="rgba(249, 198, 16, .5)">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,100&family=Zilla+Slab:wght@700&display=swap" rel="stylesheet">
@@ -28,18 +28,18 @@
         <div class="contenedor-enlaces">
           <div class="contenedor-enlaces__internos">
             <ul class="hide-on-med-and-down">
-              <li><a class="enlaces" href="#sobre-mi">Sobre mi</a></li>
-              <li><a class="enlaces" href="#que-hago">¿Qué hago?</a></li>
-              <li><a class="enlaces" href="#mis-proyectos">Mis proyectos</a></li>
-              <li><a class="enlaces" href="#testimonios">Testimonios</a></li>
-              <li><a class="enlaces" href="#contacto">Hablemos</a></li>
+              <li><a class="enlaces" href="#sobre-mi">About me</a></li>
+              <li><a class="enlaces" href="#que-hago">Knowledge</a></li>
+              <li><a class="enlaces" href="#mis-proyectos">My Projects</a></li>
+              <li><a class="enlaces" href="#testimonios">Recommendations</a></li>
+              <li><a class="enlaces" href="#contacto">Let's Talk</a></li>
             </ul>
           </div>
           <div class="contenedor-redes">
             <ul>
               <li>
-                <a class="enlaces" href="english.html" target="_blank">
-                  ENG</span>
+                <a class="enlaces" href="index.html">
+                  ESP</span>
                 </a>
               </li>
               <li>
@@ -74,11 +74,11 @@
     </nav>
               
     <ul class="sidenav" id="mobile-demo">
-      <li><a href="#sobre-mi">Sobre mi</a></li>
-      <li><a href="#que-hago">¿Qué Hago?</a></li>
-      <li><a href="#mis-proyectos">Mis Proyectos</a></li>
-      <li><a href="#testimonios">Testimonios</a></li>
-      <li><a href="#contacto">Hablemos</a></li>
+      <li><a href="#sobre-mi">About me</a></li>
+      <li><a href="#que-hago">Knowledge</a></li>
+      <li><a href="#mis-proyectos">My Projects</a></li>
+      <li><a href="#testimonios">Recommendations</a></li>
+      <li><a href="#contacto">Let's Talk</a></li>
     </ul>          
   </header>
 
@@ -90,7 +90,7 @@
 
       <div class="container-botones_cv">
         <button class="animate__animated animate__bounceIn">
-          <a href="https://drive.google.com/file/d/1pP3KshfbXjOsvUDbyge-AtktouLfmGAG/view?usp=sharing" target="_blank">CV en Español</a>
+          <a href="https://drive.google.com/file/d/1pP3KshfbXjOsvUDbyge-AtktouLfmGAG/view?usp=sharing" target="_blank">Spanish CV</a>
         </button>
   
         <button class="animate__animated animate__bounceIn">
@@ -102,22 +102,22 @@
 
   <section id="sobre-mi" class="padding-section fondo-blanco">
     <div class="container-secciones">
-      <h2>Sobre mi</h2>
+      <h2>About Me</h2>
       <div class="container-secciones__textos">
-        <p>Hola a todos, Les cuento un poco acerca de mi: Soy Abogado de profesión, pero cuando emigré a Argentina en 2017, decidí dar un giro a mi carrera y me incliné por la tecnología, específicamente por el Desarrollo Web Front End, estando siempre dispuesto, tanto a mantener las buenas prácticas de programación, como al aprendizaje constante.</p>
+        <p>Hi everyone. I'll tell you a little about myself: I am a lawyer by profession, but when I emigrated to Argentina in 2017, I decided to turn my career around and leaned towards technology, specifically Front End Web Development, always trying to maintain good programming practices and constant learning.</p>
 
-        <p>Actualmente, me desempeño como IT Support Analyst en Dentsu International realizando el mantenimiento y actualización del contenido de 141 sitios web de una importante empresa del rubro automotriz, todo esto en conjunto con un equipo que incluye otros Desarrolladores, Diseñadores Gráficos, Copywriters y Ejecutivos de Cuentas.</p>
+        <p>Currently, I work as an IT Support Analyst at Dentsu International, maintaining and updating the content of 141 websites of an important company in the automotive industry, all this in conjunction with a team that includes other Developers, Graphic Designers, Copywriters and Account Executives.</p>
 
-        <p>Además, me desempeño como Profesor del curso de Desarrollo Web de Coderhouse, lo que me motiva a estar siempre actualizado para brindarles una buena experiencia de aprendizaje a mis alumnos.</p>           
+        <p>Also, I work as a Professor of the <a href="https://www.coderhouse.com/" class="coderhouse" target="_blank">Coderhouse</a> Web Development course, which motivates me to always be up to date to provide a good learning experience for my students.</p>           
       </div>
     </div>
   </section>
 
   <section id="que-hago" class="padding-section fondo-gris">
     <div class="container-secciones">
-      <h2>¿Qué hago?</h2>
+      <h2>Knowledge</h2>
       <div class="container-secciones__textos">
-        <p>Entre las tecnologías con las que más he trabajado están: HTML 5, CSS3, JavaScript, jQuery, Bootstrap, Materialize y SASS para todo lo relacionado con el desarrollo; GIT para control de versiones, y Github como repositorio de código on-line y ahora, actualmente incursionando en el mundo de React JS.</p>
+        <p>Among the technologies with which I have worked the most are: HTML 5, CSS3, JavaScript, jQuery, Bootstrap, Materialize and SASS for everything related to development; GIT for version control, and Github as an online code repository and now, currently venturing into the world of React JS</p>
         <div class="carousel carousel-tech">
           <a class="carousel-item" href="#one!">
             <img src="img/html-5.svg" alt="logo html">
@@ -153,9 +153,9 @@
 
   <section id="mis-proyectos" class="padding-section fondo-blanco">
     <div class="container-secciones testimonios">
-      <h2>Mis<br>proyectos</h2>
+      <h2>My projects</h2>
       <div class="container-secciones__textos">
-        <p>Estos son algunos de los proyectos que he desarrollado:</p>
+        <p>These are some of the projects I have developed:</p>
         <div id="container-proyectos">
 
         </div>
@@ -165,7 +165,7 @@
 
   <section id="testimonios" class="padding-section fondo-gris">
     <div class="container-secciones testimonios">
-      <h2>Testimonios</h2>
+      <h2>Recommendations</h2>
       <div class="container-secciones__textos">
         <div id="container-testimonios">
 
@@ -176,9 +176,9 @@
 
   <section id="contacto" class="padding-section fondo-blanco">
     <div class="container-secciones">
-      <h2>Hablemos</h2>
+      <h2>Let's Talk</h2>
       <div class="container-secciones__textos container-secciones__textos-contacto">
-        <p>Si quieres contactarme, puedes hacerlo por alguno de estos medios:</p>
+        <p>If you want to contact me, you can do it by any of these:</p>
 
         <div class="botones-contacto">
           <button>
@@ -194,23 +194,23 @@
           </button>
         </div>        
         
-        <p>O dejame un mensaje en el formulario:</p>
+        <p>Or leave me a message in the form</p>
         <form action="https://formspree.io/f/xjvlladv" method="POST">
-          <label for="nombre">Nombre y apellido</label>
-          <input type="text" placeholder="Tu nombre" id="nombre" name="name" required>
+          <label for="nombre">Name</label>
+          <input type="text" placeholder="Your Name" id="nombre" name="name" required>
 
-          <label for="mail">Tu email</label>
-          <input type="email" name="email" id="mail" placeholder="Tu email" required>
+          <label for="mail">Your email</label>
+          <input type="email" name="email" id="mail" placeholder="Your email" required>
 
-          <label for="telefono">Teléfono</label>
-          <input type="tel" name="phone" id="telefono" placeholder="Teléfono (opcional)">
+          <label for="telefono">Phone</label>
+          <input type="tel" name="phone" id="telefono" placeholder="Phone (optional)">
 
-          <label for="mensaje">Tu Mensaje</label>
-          <textarea name="message" id="mensaje" placeholder="Dejame tu mensaje o solicitud de contacto"></textarea>
+          <label for="mensaje">Your Message</label>
+          <textarea name="message" id="mensaje" placeholder="Leave me your message"></textarea>
 
           <div class="botones-form">
-            <button type="submit">Enviar</button>
-            <button type="reset">Limpiar</button>
+            <button type="submit">Send</button>
+            <button type="reset">Reset</button>
           </div>
         </form>
       </div>
@@ -219,7 +219,7 @@
   </section>
 
   <footer class="fondo-gris">
-    <p>Desarrollado por <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
+    <p>Developer: <span><a href="https://github.com/danielmedtar" target="_blank">Daniel Medina &copy;</a></span></p>
   </footer>
   
   <div class="fixed-action-btn">
@@ -269,8 +269,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
 <!-------------------- PROPIOS -------------------->
-  <script src="js/proyectos.js"></script>
-  <script src="js/testimonios.js"></script>
-  <script src="js/index.js"></script>  
+<script src="js/projects.js"></script>
+<script src="js/recommendations.js"></script>
 </body>
 </html>
